@@ -31,6 +31,10 @@
 * LXS parser now supports volumes
 * Shadow catcher is now easier to use with multiple light sources of any type
 
+''Beta1 released''
+
+* Added the support for tiled denoising to save a huge amount of ram
+
 ### Fixed Bugs
 
 * Fixed rendering resume feature
@@ -60,6 +64,12 @@
 * Sun relative size has now a lower bound of 1.0 to avoid numerical precision problems
 * Fixed a problem with Scene::ToProperties() after editing a scene
 * Fixed a self-shadow problem with area light sources
+
+''Beta1 released''
+
+* Fix ToProperties() of mapspherelight and spherelight
+* Fixed a problem with caustic cache size when both PhotonGI caches were
+  enabled and automatic stop condition for indirect cache was used
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
